Добавлена страница Privacy и ее переводы. Добавлена favicon

--- a/src/pages/Policy/Policy.module.scss
+++ b/src/pages/Policy/Policy.module.scss
@@ -2,46 +2,126 @@
 
 .policy {
   &Container {
-    max-width: rem(1440) !important;
+    //max-width: rem(1440) !important;
 
   }
 
   &Inner {
-    padding-block: rem(64);
+
+    padding-block: rem(32);
 
     @include tablet {
-      padding-block: rem(32);
+      gap: 0;
+      grid-template-columns: 1fr;
+      padding-block: rem(24);
+    }
+
+    @include mobile-s {
+      padding-block: rem(18);
+    }
+  }
+
+  &Body {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: rem(64);
+    margin-bottom: rem(32);
+
+    @include tablet {
+      gap: 0;
+      grid-template-columns: 1fr;
+      margin-bottom: rem(16);
+    }
+  }
+
+  &Info {
+    width: 100%;
+
+    &List {
+      padding: rem(48);
+      background-color: var(--color-yellow-bg);
+
+      border-radius: rem(20);
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      @include laptop {
+        padding: rem(48) rem(32);
+      }
+
+      @include mobile {
+        flex-direction: column;
+        padding: rem(40) rem(36);
+        gap: rem(40);
+      }
+    }
+
+    &Item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      gap: rem(12);
+
+      svg {
+        @include square(rem(44))
+      }
+    }
+  }
+
+  &Image {
+    border-radius: rem(20);
+    @include tablet {
+      height: rem(416);
+      object-fit: cover;
+    }
+
+    @include  mobile-s {
+      height: rem(240);
     }
   }
 
   h3 {
-    font-size: rem(32);
+    font-size: rem(24);
     font-weight: 600;
-    //color: var(--color-red);
-    margin-bottom: rem(32);
-    &:not(:first-of-type) {
-      margin-top: rem(32);
-    }
+    color: var(--color-orange);
+    margin-bottom: rem(28);
   }
 
   h4 {
-    font-size: rem(24);
+    font-size: rem(20);
+    line-height: rem(24);
     color: var(--color-red);
     font-weight: 600;
-    margin-bottom: rem(24);
+    margin-bottom: rem(22);
+
+    @include mobile-s {
+      font-size: rem(18);
+      margin-bottom: rem(16);
+    }
   }
 
   p {
     font-size: rem(16);
-    font-weight: 600;
-    margin-bottom: rem(16);
+    font-weight: 500;
+    line-height: rem(24);
+    margin-bottom: rem(22);
+
+    @include mobile-s {
+      font-size: rem(14);
+      margin-bottom: rem(18);
+    }
   }
+
   ul {
     list-style: disc outside;
     padding-left: 1.5rem;
-    font-weight: 600;
-    margin-bottom: rem(16);
+    font-weight: 500;
+    margin-bottom: rem(22);
   }
+
   a {
     color: deepskyblue;
   }
